fix: Removed overflow from .hero_text css class

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -33,4 +33,5 @@
 
 .post_question {
   margin-left: 1.2rem;
+  color: #fff;
 }
